Fixed logo.png from stretching

--- a/class/main.css
+++ b/class/main.css
@@ -128,8 +128,9 @@ body {
 }
 #homebutton{
 	width: 50%;
+	max-width: 495px;
 	padding-top:5px;
-	padding-left: 15px;
+	padding-left: 10px;
 	float:left;
 }
 #level2button{
